tweaked so that it is hopefully stable

--- a/archiso/grub/grub.cfg
+++ b/archiso/grub/grub.cfg
@@ -21,7 +21,7 @@ if serial --unit=0 --speed=115200; then
 fi
 
 # Set default menu entry
-default=alci
+default=aether
 timeout=15
 timeout_style=menu
 
@@ -30,17 +30,17 @@ play 600 988 1 1319 4
 
 # Menu entries
 
-menuentry "Alci install medium (x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'alci' {
+menuentry "AetherOS install medium (x86_64, UEFI)" --class arch --class gnu-linux --class gnu --class os --id 'aether' {
     set gfxpayload=keep
     search --no-floppy --set=root --label %ARCHISO_LABEL%
-    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux-xanmod-edge archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux-xanmod-edge archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% copytoram
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux-xanmod-edge.img
 }
 
-menuentry "Alci install medium with speakup screen reader (x86_64, UEFI)" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'alci-accessibility' {
+menuentry "AetherOS install medium with speakup screen reader (x86_64, UEFI)" --hotkey s --class arch --class gnu-linux --class gnu --class os --id 'aether-accessibility' {
     set gfxpayload=keep
     search --no-floppy --set=root --label %ARCHISO_LABEL%
-    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux-xanmod-edge archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% accessibility=on
+    linux /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux-xanmod-edge archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% accessibility=on copytoram
     initrd /%INSTALL_DIR%/boot/intel-ucode.img /%INSTALL_DIR%/boot/amd-ucode.img /%INSTALL_DIR%/boot/x86_64/initramfs-linux-xanmod-edge.img
 }
 
