--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -17,7 +17,7 @@
 #HookDir     = /etc/pacman.d/hooks/
 HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -L -C - -f -o %o %u
-XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
+#XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
 Architecture = auto
 
@@ -35,7 +35,7 @@ Color
 # We cannot check disk space from within a chroot environment
 CheckSpace
 VerbosePkgLists
-ParallelDownloads = 5
+#ParallelDownloads = 5
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
